--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "extras/Testing/cpputest"]
 	path = extras/Testing/cpputest
 	url = https://github.com/cpputest/cpputest
+[submodule "cpputest"]
+	branch = v3.8
